// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers infoReducer should correctly getInfo 1`] = `
Object {
  "chain": null,
  "data": Object {},
  "hasSynced": undefined,
  "infoLoaded": false,
  "infoLoading": true,
  "network": null,
  "networks": Object {
    "bitcoin": Object {
      "mainnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 76066276,
            "public": 76067358,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 8333,
          "portRpc": 8332,
          "protocol": Object {
            "magic": 3652501241,
          },
          "pubKeyHash": 0,
          "scriptHash": 5,
          "seedsDns": Array [
            "seed.bitcoin.sipa.be",
            "dnsseed.bluematt.me",
            "dnsseed.bitcoin.dashjr.org",
            "seed.bitcoinstats.com",
            "bitseed.xf2.org",
            "seed.bitcoin.jonasschnelli.ch",
          ],
          "testnet": false,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 76066276,
              "public": 76067358,
            },
            "bip44": 0,
            "private": 128,
            "public": 0,
            "scripthash": 5,
          },
          "wif": 128,
        },
        "explorerUrl": "https://blockstream.info",
        "id": "mainnet",
        "name": "Mainnet",
        "unitPrefix": "",
      },
      "testnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 70615956,
            "public": 70617039,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "000000000933ea01ad0ee984209779baaec3ced90fa3f408719526f8d77f4943",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 18333,
          "portRpc": 18332,
          "protocol": Object {
            "magic": 118034699,
          },
          "pubKeyHash": 111,
          "scriptHash": 196,
          "seedsDns": Array [
            "testnet-seed.alexykot.me",
            "testnet-seed.bitcoin.schildbach.de",
            "testnet-seed.bitcoin.petertodd.org",
            "testnet-seed.bluematt.me",
          ],
          "testnet": true,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "bip44": 1,
            "private": 239,
            "public": 111,
            "scripthash": 196,
          },
          "wif": 239,
        },
        "explorerUrl": "https://blockstream.info/testnet",
        "id": "testnet",
        "name": "Testnet",
        "unitPrefix": "t",
      },
    },
    "litecoin": Object {
      "mainnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 27106558,
            "public": 27108450,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "12a765e31ffd4059bada1e25190f6e98c99d9714d334efa41a195a7e7e04bfe2",
          "messagePrefix": "Litecoin Signed Message:
",
          "name": "Litecoin",
          "port": 9333,
          "protocol": Object {
            "magic": 3686187259,
          },
          "pubKeyHash": 48,
          "scriptHash": 50,
          "seedsDns": Array [
            "dnsseed.litecointools.com",
            "dnsseed.litecoinpool.org",
            "dnsseed.ltc.xurious.com",
            "dnsseed.koin-project.com",
            "dnsseed.weminemnc.com",
          ],
          "testnet": false,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "LTC",
          "versions": Object {
            "bip32": Object {
              "private": 27106558,
              "public": 27108450,
            },
            "bip44": 2,
            "private": 176,
            "public": 48,
            "scripthash": 50,
            "scripthash2": 5,
          },
          "wif": 176,
        },
        "explorerUrl": "https://insight.litecore.io",
        "id": "mainnet",
        "name": "Mainnet",
        "unitPrefix": "",
      },
      "testnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 70709117,
            "public": 70711009,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "f5ae71e26c74beacc88382716aced69cddf3dffff24f384e1808905e0188f68f",
          "messagePrefix": "Litecoin Signed Message:
",
          "name": "Litecoin",
          "pubKeyHash": 111,
          "scriptHash": 58,
          "testnet": true,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "LTC",
          "versions": Object {
            "bip32": Object {
              "private": 70709117,
              "public": 70711009,
            },
            "bip44": 1,
            "private": 239,
            "public": 111,
            "scripthash": 58,
            "scripthash2": 196,
          },
          "wif": 239,
        },
        "explorerUrl": "https://testnet.litecore.io",
        "id": "testnet",
        "name": "Testnet",
        "unitPrefix": "t",
      },
    },
  },
}
`;

exports[`reducers infoReducer should correctly receiveInfo 1`] = `
Object {
  "chain": "bitcoin",
  "data": Object {
    "chains": Array [
      Object {
        "chain": "bitcoin",
        "network": "mainnet",
      },
    ],
    "semver": "0.5.2",
  },
  "hasSynced": undefined,
  "infoLoaded": true,
  "infoLoading": false,
  "network": "mainnet",
  "networks": Object {
    "bitcoin": Object {
      "mainnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 76066276,
            "public": 76067358,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 8333,
          "portRpc": 8332,
          "protocol": Object {
            "magic": 3652501241,
          },
          "pubKeyHash": 0,
          "scriptHash": 5,
          "seedsDns": Array [
            "seed.bitcoin.sipa.be",
            "dnsseed.bluematt.me",
            "dnsseed.bitcoin.dashjr.org",
            "seed.bitcoinstats.com",
            "bitseed.xf2.org",
            "seed.bitcoin.jonasschnelli.ch",
          ],
          "testnet": false,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 76066276,
              "public": 76067358,
            },
            "bip44": 0,
            "private": 128,
            "public": 0,
            "scripthash": 5,
          },
          "wif": 128,
        },
        "explorerUrl": "https://blockstream.info",
        "id": "mainnet",
        "name": "Mainnet",
        "unitPrefix": "",
      },
      "testnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 70615956,
            "public": 70617039,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "000000000933ea01ad0ee984209779baaec3ced90fa3f408719526f8d77f4943",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 18333,
          "portRpc": 18332,
          "protocol": Object {
            "magic": 118034699,
          },
          "pubKeyHash": 111,
          "scriptHash": 196,
          "seedsDns": Array [
            "testnet-seed.alexykot.me",
            "testnet-seed.bitcoin.schildbach.de",
            "testnet-seed.bitcoin.petertodd.org",
            "testnet-seed.bluematt.me",
          ],
          "testnet": true,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "bip44": 1,
            "private": 239,
            "public": 111,
            "scripthash": 196,
          },
          "wif": 239,
        },
        "explorerUrl": "https://blockstream.info/testnet",
        "id": "testnet",
        "name": "Testnet",
        "unitPrefix": "t",
      },
    },
    "litecoin": Object {
      "mainnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 27106558,
            "public": 27108450,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "12a765e31ffd4059bada1e25190f6e98c99d9714d334efa41a195a7e7e04bfe2",
          "messagePrefix": "Litecoin Signed Message:
",
          "name": "Litecoin",
          "port": 9333,
          "protocol": Object {
            "magic": 3686187259,
          },
          "pubKeyHash": 48,
          "scriptHash": 50,
          "seedsDns": Array [
            "dnsseed.litecointools.com",
            "dnsseed.litecoinpool.org",
            "dnsseed.ltc.xurious.com",
            "dnsseed.koin-project.com",
            "dnsseed.weminemnc.com",
          ],
          "testnet": false,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "LTC",
          "versions": Object {
            "bip32": Object {
              "private": 27106558,
              "public": 27108450,
            },
            "bip44": 2,
            "private": 176,
            "public": 48,
            "scripthash": 50,
            "scripthash2": 5,
          },
          "wif": 176,
        },
        "explorerUrl": "https://insight.litecore.io",
        "id": "mainnet",
        "name": "Mainnet",
        "unitPrefix": "",
      },
      "testnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 70709117,
            "public": 70711009,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "f5ae71e26c74beacc88382716aced69cddf3dffff24f384e1808905e0188f68f",
          "messagePrefix": "Litecoin Signed Message:
",
          "name": "Litecoin",
          "pubKeyHash": 111,
          "scriptHash": 58,
          "testnet": true,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "LTC",
          "versions": Object {
            "bip32": Object {
              "private": 70709117,
              "public": 70711009,
            },
            "bip44": 1,
            "private": 239,
            "public": 111,
            "scripthash": 58,
            "scripthash2": 196,
          },
          "wif": 239,
        },
        "explorerUrl": "https://testnet.litecore.io",
        "id": "testnet",
        "name": "Testnet",
        "unitPrefix": "t",
      },
    },
  },
}
`;

exports[`reducers infoReducer should handle initial state 1`] = `
Object {
  "chain": null,
  "data": Object {},
  "hasSynced": undefined,
  "infoLoaded": false,
  "infoLoading": false,
  "network": null,
  "networks": Object {
    "bitcoin": Object {
      "mainnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 76066276,
            "public": 76067358,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "000000000019d6689c085ae165831e934ff763ae46a2a6c172b3f1b60a8ce26f",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 8333,
          "portRpc": 8332,
          "protocol": Object {
            "magic": 3652501241,
          },
          "pubKeyHash": 0,
          "scriptHash": 5,
          "seedsDns": Array [
            "seed.bitcoin.sipa.be",
            "dnsseed.bluematt.me",
            "dnsseed.bitcoin.dashjr.org",
            "seed.bitcoinstats.com",
            "bitseed.xf2.org",
            "seed.bitcoin.jonasschnelli.ch",
          ],
          "testnet": false,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 76066276,
              "public": 76067358,
            },
            "bip44": 0,
            "private": 128,
            "public": 0,
            "scripthash": 5,
          },
          "wif": 128,
        },
        "explorerUrl": "https://blockstream.info",
        "id": "mainnet",
        "name": "Mainnet",
        "unitPrefix": "",
      },
      "testnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 70615956,
            "public": 70617039,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "000000000933ea01ad0ee984209779baaec3ced90fa3f408719526f8d77f4943",
          "messagePrefix": "Bitcoin Signed Message:
",
          "name": "Bitcoin",
          "per1": 100000000,
          "port": 18333,
          "portRpc": 18332,
          "protocol": Object {
            "magic": 118034699,
          },
          "pubKeyHash": 111,
          "scriptHash": 196,
          "seedsDns": Array [
            "testnet-seed.alexykot.me",
            "testnet-seed.bitcoin.schildbach.de",
            "testnet-seed.bitcoin.petertodd.org",
            "testnet-seed.bluematt.me",
          ],
          "testnet": true,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "BTC",
          "versions": Object {
            "bip32": Object {
              "private": 70615956,
              "public": 70617039,
            },
            "bip44": 1,
            "private": 239,
            "public": 111,
            "scripthash": 196,
          },
          "wif": 239,
        },
        "explorerUrl": "https://blockstream.info/testnet",
        "id": "testnet",
        "name": "Testnet",
        "unitPrefix": "t",
      },
    },
    "litecoin": Object {
      "mainnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 27106558,
            "public": 27108450,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "12a765e31ffd4059bada1e25190f6e98c99d9714d334efa41a195a7e7e04bfe2",
          "messagePrefix": "Litecoin Signed Message:
",
          "name": "Litecoin",
          "port": 9333,
          "protocol": Object {
            "magic": 3686187259,
          },
          "pubKeyHash": 48,
          "scriptHash": 50,
          "seedsDns": Array [
            "dnsseed.litecointools.com",
            "dnsseed.litecoinpool.org",
            "dnsseed.ltc.xurious.com",
            "dnsseed.koin-project.com",
            "dnsseed.weminemnc.com",
          ],
          "testnet": false,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "LTC",
          "versions": Object {
            "bip32": Object {
              "private": 27106558,
              "public": 27108450,
            },
            "bip44": 2,
            "private": 176,
            "public": 48,
            "scripthash": 50,
            "scripthash2": 5,
          },
          "wif": 176,
        },
        "explorerUrl": "https://insight.litecore.io",
        "id": "mainnet",
        "name": "Mainnet",
        "unitPrefix": "",
      },
      "testnet": Object {
        "bitcoinJsNetwork": Object {
          "bip32": Object {
            "private": 70709117,
            "public": 70711009,
          },
          "dustThreshold": null,
          "hashGenesisBlock": "f5ae71e26c74beacc88382716aced69cddf3dffff24f384e1808905e0188f68f",
          "messagePrefix": "Litecoin Signed Message:
",
          "name": "Litecoin",
          "pubKeyHash": 111,
          "scriptHash": 58,
          "testnet": true,
          "toBitcoinJS": [Function],
          "toBitcore": [Function],
          "unit": "LTC",
          "versions": Object {
            "bip32": Object {
              "private": 70709117,
              "public": 70711009,
            },
            "bip44": 1,
            "private": 239,
            "public": 111,
            "scripthash": 58,
            "scripthash2": 196,
          },
          "wif": 239,
        },
        "explorerUrl": "https://testnet.litecore.io",
        "id": "testnet",
        "name": "Testnet",
        "unitPrefix": "t",
      },
    },
  },
}
`;
